# Haskell

Leksah/Entry/: Entry.cabal
Leksah/Entry/src/: Main.hs
me/Xml/: XmlTest.cabal  cabal.sandbox.config  divToH1.hs  test.hs  test.html
me/Xml/.cabal-sandbox/i386-windows-ghc-7.6.3-packages.conf.d/: hxt-9.3.1.4-e1b7bf9895b114a72a6e982cbfb5650e.conf  hxt-charproperties-9.1.1.1-ef2948485a18b85f1c221d87d0744c76.conf  hxt-regex-xmlschema-9.1.0-3c12bde54e65ad623f0116cc0c689fc5.conf  hxt-unicode-9.0.2.2-8f87252820665e235ef987232b8e1276.conf  package.cache
me/Xml/.cabal-sandbox/i386-windows-ghc-7.6.3/hxt-9.3.1.4/Control/: FlatSeq.hi
me/Xml/.cabal-sandbox/i386-windows-ghc-7.6.3/hxt-9.3.1.4/Control/Arrow/: ArrowExc.hi  ArrowIO.hi  ArrowIf.hi  ArrowList.hi  ArrowNF.hi  ArrowNavigatableTree.hi  ArrowState.hi  ArrowTree.hi  IOListArrow.hi  IOStateListArrow.hi  ListArrow.hi  ListArrows.hi  NTreeEdit.hi  StateListArrow.hi
me/Xml/.cabal-sandbox/i386-windows-ghc-7.6.3/hxt-9.3.1.4/Data/: AssocList.hi  Atom.hi
me/Xml/.cabal-sandbox/i386-windows-ghc-7.6.3/hxt-9.3.1.4/Data/Function/: Selector.hi
me/Xml/.cabal-sandbox/i386-windows-ghc-7.6.3/hxt-9.3.1.4/Data/Tree/: Class.hi
me/Xml/.cabal-sandbox/i386-windows-ghc-7.6.3/hxt-9.3.1.4/Data/Tree/NTree/: Edit.hi  (+1 more)
me/Xml/.cabal-sandbox/i386-windows-ghc-7.6.3/hxt-charproperties-9.1.1.1/Data/Set/: CharSet.hi
me/Xml/.cabal-sandbox/i386-windows-ghc-7.6.3/hxt-unicode-9.0.2.2/Data/Char/: IsoLatinTables.hi
me/Xml/.cabal-sandbox/i386-windows-ghc-7.6.3/hxt-unicode-9.0.2.2/Data/String/: EncodingNames.hi  UTF8.hi  UTF8Decoding.hi  Unicode.hi
(+8161 files in other folders)
